--- a/src/assets/sass/_color.scss
+++ b/src/assets/sass/_color.scss
@@ -2,5 +2,6 @@ $black: #191414;
 $white: #fff;
 $blue:  #5257ea;
 $blueSecond: #2f4876 ;
-$blueTertiary:  #04071a ;
+$blueTertiary:  #04071a;
+$bluehover: #3b3fbf;
 $grey: rgb(132, 132, 132);
