--- a/src/components/NavigationEn.astro
+++ b/src/components/NavigationEn.astro
@@ -9,15 +9,15 @@ import logo from "../assets/image/logo.png";
       <i class="ph ph-x"></i>
     </div> 
     <div class="nav-container">
+      <img class="logo" src={logo.src} alt="#">
       <ul class="navlinks"> 
-        <img class="logo" src={logo.src} alt="logo">
-        <li><a href="#home" data-astro-prefetch>INICIO</a></li>
-        <li><a href="#albums" data-astro-prefetch>NOSOTROS</a></li>
+        <li><a href="#home" data-astro-prefetch>HOME</a></li>
+        <li><a href="#albums" data-astro-prefetch>ABOUT</a></li>
         <li><a href="#videos" data-astro-prefetch>IVS CORP</a></li>
-        <li><a href="#gallery" data-astro-prefetch>PROYECTOS</a></li>
-        <li><a href="#media" data-astro-prefetch>CONTACTO</a></li>
-        <div class="content"> 
-          <li><a id="language-toggle" href="/en" data-astro-prefetch rel="noreferrer">EN</a></li>
+        <li><a href="#gallery" data-astro-prefetch>PROJECTS</a></li>
+        <li><a href="#media" data-astro-prefetch>CONTACT</a></li>
+        <div class="content">
+          <li><a id="language-toggle" href="/" data-astro-prefetch rel="noreferrer">ES</a></li>
           <i class="ph ph-translate"></i>
         </div>
       </ul>
@@ -53,7 +53,7 @@ import logo from "../assets/image/logo.png";
     right: -1000px; 
     width: 100%;
     height: 100%;
-    background-color: $white;
+    background-color: rgba($primary, 80%);
     transition: right 0.5s ease-out;
     z-index: 2; 
   }
@@ -70,32 +70,32 @@ import logo from "../assets/image/logo.png";
     margin: 0;
   }
 
-  .content, .i {
+  .content, i {
     justify-content: center;
     align-items: center;
     text-align: center;
     font-size: 1.7rem;
-    color: $black;
+    color: $secondary;
   }
 
   li:hover {
     text-decoration: underline;
-    text-decoration-color: $black;
+    text-decoration-color: $tertiary;
     text-underline-offset: 13px;
     text-decoration-thickness: 3px;
   }
 
   .content li {
-    display: inline-block;  // eliminar content
+    display: inline-block;
   }
 
   .navlinks a {
     display: block;
     text-align: center;
     font-size: 1.5rem;
-    font-weight: $medium;
+    font-weight: $regular;
     font-family: $heading;
-    color: $blueTertiary;
+    color: $secondary;
     margin-top: 90px;
   }
 
@@ -117,8 +117,8 @@ import logo from "../assets/image/logo.png";
 
   #close-menu {
     position: absolute;
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     background: transparent;
     border: none;
     cursor: pointer;
@@ -127,79 +127,80 @@ import logo from "../assets/image/logo.png";
 
   .ph-x {
     font-size: 3rem;
-    color: $blue;
   }
 
   .nav-container {
-    position: relative;
-    top: 0;
+      position: relative;
+      top: 0;
   }
 
   .logo {
-    width: 200px;
+    position: absolute;
+    top: 0;
+    width: 100px;
   }
 
   @media only screen and (min-width: 1024px) {
 
-  .nav-container {
-    position: relative;
-    height: 100%;
-    z-index: 99;
-    width: 100%;
-    top: 0;
-  }
+    .nav-container {
+      position: fixed;
+      z-index: 99;
+      width: 100%;
+    }
 
-  nav {
-    position: static;
-    right: 0;
-    top: 0;
-    height: auto;
-    background-color: $black;
-    max-width: 100%;
-    margin: 0 auto;
-    z-index: 99;
-  }
+    nav {
+      right: 0;
+      top: 0;
+      height: auto;
+      background-color: rgba($primary, 90%);
+      max-width: 100%;
+      margin: 0 auto;
+      z-index: 99;
+    }
 
-  .navlinks {
-    display: flex;
-    flex-direction: row;
-    height: 60px;
-    justify-content: space-around;
-    align-items: center;
-    text-decoration: none;
-    list-style: none;
-  }
+    .navlinks {
+      display: flex;
+      flex-direction: row;
+      height: 60px;
+      margin: 0 10%;
+      justify-content: space-around;
+      align-items: center;
+      text-decoration: none;
+      list-style: none;
+    }
 
-  .close-menu-container {
-    display: none;
-  }
+    .close-menu-container {
+      display: none;
+    }
 
-  .blur-background {
-    position: static; 
-    top: auto; 
-    left: auto; 
-    width: auto; 
-    height: auto; 
-    backdrop-filter: none;
-    background-color: transparent; 
-    opacity: 1; 
-    transition: none; 
-    z-index: auto; 
-    pointer-events: all; 
-  }
+    .blur-background {
+      position: static; 
+      top: auto; 
+      left: auto; 
+      width: auto; 
+      height: auto; 
+      backdrop-filter: none;
+      background-color: transparent; 
+      opacity: 1; 
+      transition: none; 
+      z-index: auto; 
+      pointer-events: all; 
+    }
 
-  .nav-container {
-    position: relative;
-    top: 0;
-  }
+    .nav-container {
+      position: relative;
+      top: 0;
+    }
 
-  .logo {
-    width: 100px;
-  }
+    .logo {
+      position: absolute;
+      top: 0;
+      width: 100px;
+    }
 
-  .navlinks a {
-    font-size: 1rem;
-    margin-top: 0;
-  }
+    .navlinks a {
+      font-size: 1rem;
+      margin-top: 0;
+    }
   }
 </style>
