--- a/src/components/SectionFlex.astro
+++ b/src/components/SectionFlex.astro
@@ -1,52 +1,95 @@
 ---
-import imageA from "../assets/image/image6.jpg";
+import imageA from "../assets/image/image19.webp";
+import imageB from "../assets/image/image2.jpg";
 ---
-
-<section>
+  <section>
     <div>
       <img src={imageA.src} alt="">
     </div>
     <div>
-      <p>Welcome...</p>
-      <p>to Venezolana de acero</p>
-      <button class="transparent">
+      <h2>Welcome...</h2>
+      <h3>to Venezolana de <span>acero</span></h3>
+      <button class="primarybutton">
       <a href="" target="_blank">leer mas</a>
       </button>
     </div>
     </div>
     <div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-        Eveniet totam quidem ab nihil cumque ex.
-        Nemo maxime nobis fuga expedita.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Atque, suscipit?</p>
-        <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Eveniet totam quidem ab nihil cumque ex.
+      Nemo maxime nobis fuga expedita.</p>
+      <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Atque, suscipit?</p>
+      <p><span>Lorem ipsum dolor sit amet.</span></p>
     </div>
+  <div class="content-area">
+    <img src={imageB.src} alt="">
+    <h2>ACERCA DE NOSOTROS</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur, labore molestias consequuntur
+    earum dolorum est totam excepturi dolorem animi ratione.</p>
+  </div>
 </section>
 
 <style lang="scss">
   @use '../assets/sass/index' as *;
 
   section {
+    background-image: linear-gradient(rgba(197, 195, 230, 90%), rgba(197, 195, 230, 90%)), url("../assets/image/primaryback.webp");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: left;
     width: 100%;
-    height: 100vh;
     background-color: $white;
-    padding: 0 5%;
+    padding: 40px 5%;
   }
 
   img {
     width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    border-radius: 5px;
   }
 
   p {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-family: $text;
     font-weight: $bold;
     color: $black;
+    margin: 0;
+  }
+
+  span {
+    color: $blueSecond;
+  }
+
+  .text {
+    color: $grey;
+    margin: 20px 0;
+  }
+
+  button { 
+    margin: 30px 0;
+  }
+
+  .primarybutton:hover {
+    background-color: #3b3fbf;
+  }
+
+  .content-area {
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    flex-direction: column;
+    margin: 0;
+    padding: 100px 0;
+
+    p{
+     margin: 20px 0;
+    }
   }
 
 </style>
