--- a/src/layouts/SpanishLayout.astro
+++ b/src/layouts/SpanishLayout.astro
@@ -54,36 +54,35 @@ import logo from "../assets/image/logo.png";
 
   h2 {
     font-size: 2.5rem;
-    font-weight: $regular;
+    font-weight: $bold;
     font-family: $heading;
     color: $black;
-    margin: 0 5%;
+    margin: 0 0%;
   }
 
   h3 {
     font-size: 2rem;
     font-family: $heading;
     font-weight: $bold;
-    color: $white;
-    margin: 0 15%; 
+    color: $black;
+    margin: 0 0%; 
   }
   
   .underline {
-    width: 130px;
+    width: 100%;
     height: 2px;
     background-color: $blue;
     justify-content: left;
     border-radius: 2px;
-    margin: 0 5% 20px; 
+    margin: 0 0 50px; 
   }
   
   p {
     font-size: 1.25rem;
     font-family: $heading;
     font-weight: $regular;
-    font-style: italic;
     color: $white;
-    margin:0 0 10px; 
+    margin:10px 5%; 
   }
 
   a {
