--- a/src/components/SectionBox.astro
+++ b/src/components/SectionBox.astro
@@ -1,20 +1,85 @@
 ---
-import imageA from "../assets/image/image14.webp";
+const { titleA, titleB, titleC, titleD, titleE, titleF, titleG } = Astro.props;
 ---
 
-<section>
+<section id="projects">
   <figure>
-    <div class="content-back-B">
-      <div class="sec"> 
-        <h4>our history</h4>
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
+    <div class="animated content-back-A">
+      <h4>{titleA}</h4>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="animated content-back-B">
+      <h4>{titleB}</h4>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="animated content-back-C">
+      <h4>{titleC}</h4>
+      <p>Lorem ipsum dolor sit amet.</p>
     </div>
   </figure>
+  <div id="ivs" class="content-text">
+    <h2>{titleD}</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Necessitatibus atque molestiae omnis fugit culpa
+    reiciendis ratione quaerat aliquam excepturi nesciunt!</p>
+  </div>
+  <article>
+    <div class="animated content-icon">
+      <i class="ph ph-chart-line-up"></i>
+      <h3>{titleE}</h3>
+      <p>Lorem ipsum dolor sit amet consectetur 
+      adipisicing elit. Officiis, aspernatur?</p>
+    </div>
+    <div class="animated content-icon">
+      <i class="ph ph-buildings"></i>
+      <h3>{titleF}</h3>
+      <p>Lorem ipsum dolor sit amet consectetur 
+      adipisicing elit. Officiis, aspernatur?</p>
+    </div>
+    <div class="animated content-icon">
+      <i class="ph ph-factory"></i>
+      <h3>{titleG}</h3>
+      <p>Lorem ipsum dolor sit amet consectetur 
+      adipisicing elit. Officiis</p>
+    </div>
+  </article>
 </section>
 
 <style lang="scss">
   @use '../assets/sass/index' as *;
+
+  .animated {
+    opacity: 0; 
+    transform: translateX(100px); 
+    transition: opacity 0.7s ease, transform 0.7s ease;
+  }
+
+  .animated.visible {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  .animated:nth-child(1) {
+    transition-delay: 0.4s;
+  }
+
+  .animated:nth-child(2) {
+    transition-delay: 0.6s;
+  }
+
+  .animated:nth-child(3) {
+    transition-delay: 0.8s;
+  }
+  //animation end
+
+  section {
+    position: relative;
+    background-image: linear-gradient(rgba(12, 183, 242, 90%), rgba(12, 183, 242, 90%)), url("../assets/image/image19.webp");
+    background-repeat: no-repeat;
+    background-position: center calc(50% + 570px);
+    background-size: cover;
+    padding: 40px 5%;
+  }
 
   figure{
     display: flex;
@@ -23,36 +88,147 @@ import imageA from "../assets/image/image14.webp";
     align-items: center;
     width: 100%;
     margin: 0 auto; 
-    background-color: $white;
-    padding: 40px 5%;
-  }
+    max-width: 400px;
+    background-color: transparent;
+    gap: 50px;
 
-  .sec{
-    position: relative;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
+    p, h4{
+      color: $white;
+    }
+
+    p{
+      margin-bottom: 40px;
+    }
   }
 
   .content-back-B {
     position: relative;
-    background-image: url("../assets/image/image19.webp");
+    background-image:linear-gradient(rgba(0, 0, 0, 50%), rgba(0, 0, 0, 50%)), url("../assets/image/image19.webp");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:flex-end;
     align-items: left;
     width: 100%;
     height: 300px;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+
+  .content-back-A {
+    position: relative;
+    background-image:linear-gradient(rgba(0, 0, 0, 50%), rgba(0, 0, 0, 50%)), url("../assets/image/image9.webp");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-end;
+    align-items: left;
+    width: 100%;
+    height: 300px;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+
+  .content-back-C {
+    position: relative;
+    background-image:linear-gradient(rgba(0, 0, 0, 50%), rgba(0, 0, 0, 50%)), url("../assets/image/image22.webp");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-end;
+    align-items: left;
+    width: 100%;
+    height: 300px;
+    max-width: 500px;
+    margin: 0 auto;
   }
 
   p, h4{
-    color: $white;
+    margin: 10px 5%;
+  }
+
+  .content-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    width: 100%;
+    gap: 30px;
+    margin-top: 40px;
+
+    p{
+      margin: 0 0 50px;
+      color: $black;
+    }
+  }
+
+  article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    width: 100%;
+    gap: 50px;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+
+  .content-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: left;
+    width: 100%;
+    margin-bottom: 20px; 
+    background-color: $white;
+    border-radius: 5px; 
+    padding: 20px;
+
+    p {
+     color: black;
+      margin: 40px 0;
+    }
+  }
+
+  .content-icon i {
+    font-size: 5rem;
+    color: $icon;
+  }
+
+  @media only screen and (min-width: 1024px) {
+    figure {
+      flex-direction: row;
+      max-width: 900px;
+    }
+
+    .content-text {
+      text-align: center;
+      align-items: center;
+      padding: 50px;
+      p{
+        width: 70%;
+      }
+    }
+
+    article {
+      flex-direction: row;
+      max-width: 950px;
+    }
+
+    section {
+    position: relative;
+    background-image: linear-gradient(rgba(12, 183, 242, 90%), rgba(12, 183, 242, 90%)), url("../assets/image/image19.webp");
+    background-repeat: no-repeat;
+    background-position: center calc(10% + 270px);
+    background-size: cover;
+    padding: 40px 5%;
+  }
   }
 
 </style>
