--- a/src/layouts/SpanishLayout.astro
+++ b/src/layouts/SpanishLayout.astro
@@ -5,7 +5,7 @@ import logo from "../assets/image/logo.png";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/png" href={logo.src} />
@@ -66,6 +66,13 @@ import logo from "../assets/image/logo.png";
     font-weight: $bold;
     color: $black;
     margin: 0 0%; 
+  }
+
+  h4 {
+    font-size: 1.5rem;
+    font-family: $heading;
+    font-weight: $bold;
+    color: $white;
   }
   
   .underline {
