--- a/src/components/SectionFlex.astro
+++ b/src/components/SectionFlex.astro
@@ -37,6 +37,7 @@ const { title, buttomA, textA, textB, textC, titleA, textD, EN } = Astro.props;
     opacity: 0; 
     transform: translateX(100px); 
     transition: opacity 0.7s ease, transform 0.7s ease;
+    will-change: transform, opacity; 
   }
 
   .animated.visible {
@@ -69,6 +70,7 @@ const { title, buttomA, textA, textB, textC, titleA, textD, EN } = Astro.props;
     width: 100%;
     background-color: $white;
     padding: 40px 5%;
+    overflow: hidden;
   }
 
   img {
