add another content

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -15,14 +15,13 @@ import Contact from "../../components/Contact.astro";
 <EnglishLayout title="Venezolana de acero">
 	<HomeSlider images={[slide1.src, slide2.src, slide3.src, slide4.src]}
 	title="VENEZOLANO DE ACERO"
-	textA="SPECIALISTS IN THE MARKETING" 
-	textB="AND DISTRIBUTION OF STEEL PRODUCTS AT THE NATIONAL AND INTERNATIONAL LEVEL"
+	textB="SPECIALISTS IN THE COMMERCIALIZE"
 	buttomA="See more"
 	buttomB="contact us"/>
 	<SectionFlex
 	title="Welcome..."
 	EN="TO"
-	textA="Lorem ipsum dolor, labore molestias consequuntur earum dolorum est "
+	textA="DISTRIBUTION OF STEEL PRODUCTS AT THE NATIONAL AND INTERNATIONAL LEVEL"
 	textB="Lorem ipsum dolor, labore molestias consequuntur earum dolorum est "
 	textC="lorem ipsum dolor sit"
 	buttomA="See more"
