--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,14 +15,13 @@ import Contact from "../components/Contact.astro";
 <SpanishLayout title="Venezolana de acero">
 	<HomeSlider images={[slide1.src, slide2.src, slide3.src, slide4.src]}
 	title="VENEZOLANO DE ACERO"
-	textA="ESPECIALISTAS EN LA COMERCIALIZACIÓN" 
-	textB="Y DISTRIBUCIÓN DE PRODUCTOS SIDERURGICOS A NIVEL NACIONAL E INTERNACIONAL"
+	textB="DISTRIBUIDOR DE PRODUCTOS SIDERURGICOS"
 	buttomA="Leer más"
 	buttomB="Contactanos"/>
 	<SectionFlex
 	title="Bienvenido..."
 	EN="A"
-	textA="Lorem ipsum dolor, labore molestias consequuntur earum dolorum est "
+	textA="DISTRIBUCIÓN DE PRODUCTOS SIDERURGICOS A NIVEL NACIONAL E INTERNACIONAL"
 	textB="Lorem ipsum dolor, labore molestias consequuntur earum dolorum est "
 	textC="lorem ipsum dolor sit"
 	buttomA="Leer mas"
