--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -14,8 +14,8 @@ import Contact from "../../components/Contact.astro";
 
 <EnglishLayout title="Venezolana de acero">
 	<HomeSlider images={[slide1.src, slide2.src, slide3.src, slide4.src]}
-	title="VENEZOLANO DE ACERO"
-	textB="SPECIALISTS IN THE COMMERCIALIZE"
+	title="VENEZOLANA DE ACERO"
+	textB="DISTRIBUTOR OF STEEL PRODUCTS"
 	buttomA="See more"
 	buttomB="contact us"/>
 	<SectionFlex
