--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Contact from "../components/Contact.astro";
 
 <SpanishLayout title="Venezolana de acero">
 	<HomeSlider images={[slide1.src, slide2.src, slide3.src, slide4.src]}
-	title="VENEZOLANO DE ACERO"
+	title="VENEZOLANA DE ACERO"
 	textB="DISTRIBUIDOR DE PRODUCTOS SIDERURGICOS"
 	buttomA="Leer más"
 	buttomB="Contactanos"/>
