--- a/src/assets/sass/_color.scss
+++ b/src/assets/sass/_color.scss
@@ -1,8 +1,8 @@
-$black: #191414;
-$white: #fff;
-$blue:  #5257ea;
+$black: #0D0D0D;
+$white: #F2F2F2;
+$blue:  #1F4E8C;
 $blueSecond: #2f4876 ;
 $blueTertiary:  #04071a;
-$bluehover: #3b3fbf;
+$bluehover: #331122;
 $grey: rgb(132, 132, 132);
-$icon: #0cb7f2;
+$icon: #1F4E8C;
