--- a/src/components/SectionBox.astro
+++ b/src/components/SectionBox.astro
@@ -75,7 +75,7 @@ const { titleA, titleB, titleC, titleD, titleE, titleF, titleG } = Astro.props;
 
   section {
     position: relative;
-    background-image: linear-gradient(rgba(12, 183, 242, 90%), rgba(12, 183, 242, 90%)), url("../assets/image/image19.webp");
+    background-image: linear-gradient(rgba(31,78,140 , 90%), rgba(31,78 ,140 , 90%)), url("../assets/image/image19.webp");
     background-repeat: no-repeat;
     background-position: center calc(50% + 570px);
     background-size: cover;
@@ -166,7 +166,11 @@ const { titleA, titleB, titleC, titleD, titleE, titleF, titleG } = Astro.props;
 
     p{
       margin: 0 0 50px;
-      color: $black;
+      color: $white;
+    }
+
+    h2 {
+      color: $white;
     }
   }
 
@@ -193,7 +197,7 @@ const { titleA, titleB, titleC, titleD, titleE, titleF, titleG } = Astro.props;
     padding: 20px;
 
     p {
-     color: black;
+     color: $black;
       margin: 40px 0;
     }
   }
@@ -225,7 +229,7 @@ const { titleA, titleB, titleC, titleD, titleE, titleF, titleG } = Astro.props;
 
     section {
     position: relative;
-    background-image: linear-gradient(rgba(12, 183, 242, 90%), rgba(12, 183, 242, 90%)), url("../assets/image/image19.webp");
+    background-image: linear-gradient(rgba(31,78,140 , 70%), rgba(31,78 ,140 , 90%)), url("../assets/image/image19.webp");
     background-repeat: no-repeat;
     background-position: center calc(10% + 270px);
     background-size: cover;
