--- a/src/components/SectionFlex.astro
+++ b/src/components/SectionFlex.astro
@@ -59,7 +59,7 @@ const { title, buttomA, textA, textB, textC, titleA, textD, EN } = Astro.props;
   //animation end
 
   section {
-    background-image: linear-gradient(rgba(202, 238, 249, 0.9), rgba(202, 238, 249, 0.9)), url("../assets/image/primaryback.webp");
+    background-image: linear-gradient(rgba(170, 199, 236, 0.9), rgba(170, 199, 236, 0.9)), url("../assets/image/primaryback.webp");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -89,11 +89,11 @@ const { title, buttomA, textA, textB, textC, titleA, textD, EN } = Astro.props;
   }
 
   span {
-    color: $blueSecond;
+    color: $blue;
   }
 
   .text {
-    color: $grey;
+    color: $black;
     margin: 20px 0;
   }
 
@@ -102,7 +102,7 @@ const { title, buttomA, textA, textB, textC, titleA, textD, EN } = Astro.props;
   }
 
   .primarybutton:hover {
-    background-color: #3b3fbf;
+    background-color: $blueTertiary;
   }
 
   .content-area {
