--- a/src/layouts/EnglishLayout.astro
+++ b/src/layouts/EnglishLayout.astro
@@ -24,6 +24,10 @@ import logo from "../assets/image/logo.png";
 
 <style is:global lang="scss">
   @use '../assets/sass/index' as *; 
+
+  body {
+    background-color: $white;
+  }
     
   html {
     scroll-behavior: smooth;
