--- a/src/layouts/SpanishLayout.astro
+++ b/src/layouts/SpanishLayout.astro
@@ -24,6 +24,10 @@ import logo from "../assets/image/logo.png";
 
 <style is:global lang="scss">
   @use '../assets/sass/index' as *; 
+
+  body {
+    background-color: $white;
+  }
     
   html {
     scroll-behavior: smooth;
@@ -136,10 +140,10 @@ import logo from "../assets/image/logo.png";
   }
   
   .primarybutton:hover {
-    background-color: rgba($blue, 50%);
+    background-color: rgba($icon, 50%);
   }
 
   .transparent:hover {
-    background-color: rgba($blue, 50%);
+    background-color: rgba($white, 50%);
   }
 </style>
