--- a/src/components/HomeSlider.astro
+++ b/src/components/HomeSlider.astro
@@ -12,7 +12,7 @@ import logo from "../assets/image/logo.png";
   <h1 id="main-title">
     <a href="/"><img class="logo" src={logo.src} alt="logo"></a>
     {title}
-    <span>{textB}</span>
+    <span></span>
     <div class="button-container">
       <button class="primarybutton">
         <a href="#projects">{buttomA}</a>
@@ -32,7 +32,7 @@ import logo from "../assets/image/logo.png";
     width: 100px;
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: 10;
   }
 
   header {
