--- a/src/components/SectionBox.astro
+++ b/src/components/SectionBox.astro
@@ -75,7 +75,7 @@ const { titleA, titleB, titleC, titleD, titleE, titleF, titleG } = Astro.props;
 
   section {
     position: relative;
-    background-image: linear-gradient(rgba(31,78,140 , 90%), rgba(31,78 ,140 , 90%)), url("../assets/image/image19.webp");
+    background-image: linear-gradient(rgba($blueTertiary, 85%), rgba($blueTertiary, 85%)), url("../assets/image/image19.webp");
     background-repeat: no-repeat;
     background-position: center calc(50% + 570px);
     background-size: cover;
@@ -229,7 +229,7 @@ const { titleA, titleB, titleC, titleD, titleE, titleF, titleG } = Astro.props;
 
     section {
     position: relative;
-    background-image: linear-gradient(rgba(31,78,140 , 70%), rgba(31,78 ,140 , 90%)), url("../assets/image/image19.webp");
+    background-image: linear-gradient(rgba($blueTertiary, 85%), rgba($blueTertiary, 85%)), url("../assets/image/image19.webp");
     background-repeat: no-repeat;
     background-position: center calc(10% + 270px);
     background-size: cover;
