--- a/src/layouts/SpanishLayout.astro
+++ b/src/layouts/SpanishLayout.astro
@@ -134,16 +134,23 @@ import logo from "../assets/image/logo.png";
   }
   
   .primarybutton {
-    background-color: $blue;
+    background-color: $grey;
     border-radius: 5px;
     border: none;
+
+    a {
+      color: $white;
+      font-size: 1.2rem;
+      font-weight: $bold;
+      font-family: $text;
+    }
   }
   
   .primarybutton:hover {
-    background-color: rgba($icon, 50%);
+    background-color: rgba(#434141, 50%);
   }
 
   .transparent:hover {
-    background-color: rgba($white, 50%);
+    background-color: rgba(#434141, 50%);
   }
 </style>
