--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -40,7 +40,7 @@ import Contact from "../../components/Contact.astro";
 	 titleA="contenido1"
 	 titleB="contenido2"
 	 titleC="contenido3"
-	 titleD="contenido4"
+	 titleD="IVS CORP"
 	 titleE="contenido5"
 	 titleF="contenido6"
 	 titleG="contenido7"/>
