--- a/src/components/SectionFlex.astro
+++ b/src/components/SectionFlex.astro
@@ -59,7 +59,7 @@ const { title, buttomA, textA, textB, textC, titleA, textD, EN } = Astro.props;
   //animation end
 
   section {
-    background-image: linear-gradient(rgba(170, 199, 236, 0.9), rgba(170, 199, 236, 0.9)), url("../assets/image/primaryback.webp");
+    background-image: linear-gradient(rgba($blueTertiary, 0.9), rgba($blueTertiary, 0.9)), url("../assets/image/primaryback.webp");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -68,7 +68,6 @@ const { title, buttomA, textA, textB, textC, titleA, textD, EN } = Astro.props;
     justify-content: center;
     align-items: left;
     width: 100%;
-    background-color: $white;
     padding: 40px 5%;
     overflow: hidden;
   }
@@ -84,16 +83,16 @@ const { title, buttomA, textA, textB, textC, titleA, textD, EN } = Astro.props;
     font-size: 1.5rem;
     font-family: $text;
     font-weight: $bold;
-    color: $black;
+    color: $white;
     margin: 0;
   }
 
   span {
-    color: $blue;
+    color: $grey;
   }
 
   .text {
-    color: $black;
+    color: $white;
     margin: 20px 0;
   }
 
@@ -102,7 +101,7 @@ const { title, buttomA, textA, textB, textC, titleA, textD, EN } = Astro.props;
   }
 
   .primarybutton:hover {
-    background-color: $blueTertiary;
+    background-color: #434141;
   }
 
   .content-area {
@@ -123,6 +122,12 @@ const { title, buttomA, textA, textB, textC, titleA, textD, EN } = Astro.props;
     justify-content: center;
     align-items: left;
     flex-direction: column;
+
+  }
+
+  h2, 
+  h3 {
+    color: $white;
   }
 
   @media only screen and (min-width: 1024px) {
